parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    TK_NuevaLinea

Grammar

Rule 0     S' -> ProgramEnd
Rule 1     ProgramEnd -> Function TK_Program Instructions TK_End TK_Semicolon
Rule 2     ProgramEnd -> TK_Program Instructions TK_End TK_Semicolon
Rule 3     ProgramEnd -> TK_Program TK_End TK_Semicolon
Rule 4     ID -> TK_ID
Rule 5     String -> TK_String
Rule 6     Number -> TK_FNumber
Rule 7     VariableDeclaration -> Type ID TK_Semicolon
Rule 8     VariableDeclaration -> Type ID TK_Assign Expresion TK_Semicolon
Rule 9     Set -> TK_Set ID TK_Assign Expresion TK_Semicolon
Rule 10    Set -> TK_Set Vector TK_Assign Expresion TK_Semicolon
Rule 11    Set -> TK_Set ID TK_Assign LlamadoFuncion TK_Semicolon
Rule 12    Boolean -> TK_False
Rule 13    Boolean -> TK_True
Rule 14    Expresion -> Boolean
Rule 15    Expresion -> Number
Rule 16    Expresion -> ID
Rule 17    Expresion -> Vector
Rule 18    Expresion -> MatrixFormatI
Rule 19    Expresion -> TK_ParenI Expresion TK_ParenD
Rule 20    Expresion -> TK_Not Expresion
Rule 21    Expresion -> TK_Minus Expresion
Rule 22    Expresion -> Expresion TK_Sum Expresion
Rule 23    Expresion -> Expresion TK_Minus Expresion
Rule 24    Expresion -> Expresion TK_Times Expresion
Rule 25    Expresion -> Expresion TK_Divide Expresion
Rule 26    Expresion -> Expresion TK_Div Expresion
Rule 27    Expresion -> Expresion TK_Mod Expresion
Rule 28    Expresion -> Expresion TK_ModS Expresion
Rule 29    Expresion -> Expresion TK_Equal Expresion
Rule 30    Expresion -> Expresion TK_Greatereq Expresion
Rule 31    Expresion -> Expresion TK_Greater Expresion
Rule 32    Expresion -> Expresion TK_Lesseq Expresion
Rule 33    Expresion -> Expresion TK_Less Expresion
Rule 34    Expresion -> Expresion TK_Distint Expresion
Rule 35    Expresion -> Expresion TK_And Expresion
Rule 36    Expresion -> Expresion TK_Or Expresion
Rule 37    Expresion -> Expresion TK_Sumcross Expresion
Rule 38    Expresion -> Expresion TK_Modcross Expresion
Rule 39    Expresion -> Expresion TK_Minuscross Expresion
Rule 40    Expresion -> Expresion TK_Divcross Expresion
Rule 41    Expresion -> Expresion TK_ModScross Expresion
Rule 42    Expresion -> Expresion TK_Dividecross Expresion
Rule 43    Expresion -> Expresion TK_Timescross Expresion
Rule 44    ReturnI -> TK_Return Expresion TK_Semicolon
Rule 45    Read -> TK_Read ID TK_Semicolon
Rule 46    Comments -> TK_CommentConNumeral
Rule 47    Print -> TK_Print CommaString TK_Semicolon
Rule 48    CommaStringTipoDato -> String
Rule 49    CommaStringTipoDato -> Expresion
Rule 50    CommaString -> CommaStringTipoDato
Rule 51    CommaString -> CommaString TK_Comma CommaStringTipoDato
Rule 52    Instructions -> InstructionsBase
Rule 53    Instructions -> Instructions InstructionsBase
Rule 54    InstructionsBase -> Set
Rule 55    InstructionsBase -> Read
Rule 56    InstructionsBase -> Print
Rule 57    InstructionsBase -> ReturnI
Rule 58    InstructionsBase -> VariableDeclaration
Rule 59    InstructionsBase -> If_Else
Rule 60    InstructionsBase -> Use_In
Rule 61    InstructionsBase -> While
Rule 62    InstructionsBase -> For
Rule 63    InstructionsBase -> LlamadoFuncion
Rule 64    InstructionsBase -> Comments
Rule 65    InstructionsBase -> Expresion TK_Semicolon
Rule 66    If_Else -> TK_If Expresion TK_Then Instructions TK_End TK_Semicolon
Rule 67    If_Else -> TK_If Expresion TK_Then Instructions TK_Else Instructions TK_End TK_Semicolon
Rule 68    MatrixFormatI -> TK_KeyI MatrixNumber TK_KeyD
Rule 69    CommaNumber -> Expresion
Rule 70    CommaNumber -> CommaNumber TK_Comma Expresion
Rule 71    MatrixNumber -> CommaNumber
Rule 72    MatrixNumber -> MatrixNumber TK_Colon CommaNumber
Rule 73    Use_In -> TK_Use Instructions TK_In Instructions TK_End TK_Semicolon
Rule 74    Use_In -> TK_Use Instructions TK_In TK_End TK_Semicolon
Rule 75    For -> TK_For ID TK_In Expresion TK_Do Instructions TK_End TK_Semicolon
Rule 76    While -> TK_While Expresion TK_Do Instructions TK_End TK_Semicolon
Rule 77    Type -> TK_Bool
Rule 78    Type -> TK_Number
Rule 79    Type -> Matrix
Rule 80    Type -> Row
Rule 81    Type -> Column
Rule 82    Function -> TK_Function ID TK_ParenI Argumento TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
Rule 83    Function -> TK_Function ID TK_ParenI TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
Rule 84    Function -> Function TK_Function ID TK_ParenI Argumento TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
Rule 85    Function -> Function TK_Function ID TK_ParenI TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
Rule 86    Argumento -> Type ID
Rule 87    Argumento -> Argumento TK_Comma Type ID
Rule 88    LlamadoFuncion -> ID TK_ParenI Parameter TK_ParenD TK_Semicolon
Rule 89    LlamadoFuncion -> ID TK_ParenI TK_ParenD TK_Semicolon
Rule 90    Parameter -> Parameter TK_Comma Expresion
Rule 91    Parameter -> Expresion
Rule 92    Matrix -> TK_Matrix TK_ParenI Number TK_Comma Number TK_ParenD
Rule 93    Matrix -> TK_Matrix TK_ParenI ID TK_Comma ID TK_ParenD
Rule 94    Matrix -> TK_Matrix TK_ParenI Number TK_Comma ID TK_ParenD
Rule 95    Matrix -> TK_Matrix TK_ParenI ID TK_Comma Number TK_ParenD
Rule 96    Row -> TK_Row TK_ParenI Number TK_ParenD
Rule 97    Row -> TK_Row TK_ParenI ID TK_ParenD
Rule 98    Column -> TK_Col TK_ParenI Number TK_ParenD
Rule 99    Column -> TK_Col TK_ParenI ID TK_ParenD
Rule 100   Vector -> Expresion TK_BracketI Expresion TK_BracketD
Rule 101   Vector -> Expresion TK_BracketI Expresion TK_Comma Expresion TK_BracketD

Terminals, with rules where they appear

TK_And               : 35
TK_Assign            : 8 9 10 11
TK_Begin             : 82 83 84 85
TK_Bool              : 77
TK_BracketD          : 100 101
TK_BracketI          : 100 101
TK_Col               : 98 99
TK_Colon             : 72
TK_Comma             : 51 70 87 90 92 93 94 95 101
TK_CommentConNumeral : 46
TK_Distint           : 34
TK_Div               : 26
TK_Divcross          : 40
TK_Divide            : 25
TK_Dividecross       : 42
TK_Do                : 75 76
TK_Else              : 67
TK_End               : 1 2 3 66 67 73 74 75 76 82 83 84 85
TK_Equal             : 29
TK_FNumber           : 6
TK_False             : 12
TK_For               : 75
TK_Function          : 82 83 84 85
TK_Greater           : 31
TK_Greatereq         : 30
TK_ID                : 4
TK_If                : 66 67
TK_In                : 73 74 75
TK_KeyD              : 68
TK_KeyI              : 68
TK_Less              : 33
TK_Lesseq            : 32
TK_Matrix            : 92 93 94 95
TK_Minus             : 21 23
TK_Minuscross        : 39
TK_Mod               : 27
TK_ModS              : 28
TK_ModScross         : 41
TK_Modcross          : 38
TK_Not               : 20
TK_NuevaLinea        : 
TK_Number            : 78
TK_Or                : 36
TK_ParenD            : 19 82 83 84 85 88 89 92 93 94 95 96 97 98 99
TK_ParenI            : 19 82 83 84 85 88 89 92 93 94 95 96 97 98 99
TK_Print             : 47
TK_Program           : 1 2 3
TK_Read              : 45
TK_Return            : 44 82 83 84 85
TK_Row               : 96 97
TK_Semicolon         : 1 2 3 7 8 9 10 11 44 45 47 65 66 67 73 74 75 76 82 83 84 85 88 89
TK_Set               : 9 10 11
TK_String            : 5
TK_Sum               : 22
TK_Sumcross          : 37
TK_Then              : 66 67
TK_Times             : 24
TK_Timescross        : 43
TK_True              : 13
TK_Use               : 73 74
TK_While             : 76
error                : 

Nonterminals, with rules where they appear

Argumento            : 82 84 87
Boolean              : 14
Column               : 81
CommaNumber          : 70 71 72
CommaString          : 47 51
CommaStringTipoDato  : 50 51
Comments             : 64
Expresion            : 8 9 10 19 20 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 49 65 66 67 69 70 75 76 90 91 100 100 101 101 101
For                  : 62
Function             : 1 84 85
ID                   : 7 8 9 11 16 45 75 82 83 84 85 86 87 88 89 93 93 94 95 97 99
If_Else              : 59
Instructions         : 1 2 53 66 67 67 73 73 74 75 76 82 83 84 85
InstructionsBase     : 52 53
LlamadoFuncion       : 11 63
Matrix               : 79
MatrixFormatI        : 18
MatrixNumber         : 68 72
Number               : 15 92 92 94 95 96 98
Parameter            : 88 90
Print                : 56
ProgramEnd           : 0
Read                 : 55
ReturnI              : 57
Row                  : 80
Set                  : 54
String               : 48
Type                 : 7 8 82 83 84 85 86 87
Use_In               : 60
VariableDeclaration  : 58
Vector               : 10 17
While                : 61

Parsing method: LALR

state 0

    (0) S' -> . ProgramEnd
    (1) ProgramEnd -> . Function TK_Program Instructions TK_End TK_Semicolon
    (2) ProgramEnd -> . TK_Program Instructions TK_End TK_Semicolon
    (3) ProgramEnd -> . TK_Program TK_End TK_Semicolon
    (82) Function -> . TK_Function ID TK_ParenI Argumento TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
    (83) Function -> . TK_Function ID TK_ParenI TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
    (84) Function -> . Function TK_Function ID TK_ParenI Argumento TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
    (85) Function -> . Function TK_Function ID TK_ParenI TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon

    TK_Program      shift and go to state 4
    TK_Function     shift and go to state 3

    Function                       shift and go to state 1
    ProgramEnd                     shift and go to state 2

state 1

    (1) ProgramEnd -> Function . TK_Program Instructions TK_End TK_Semicolon
    (84) Function -> Function . TK_Function ID TK_ParenI Argumento TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
    (85) Function -> Function . TK_Function ID TK_ParenI TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon

    TK_Program      shift and go to state 6
    TK_Function     shift and go to state 5


state 2

    (0) S' -> ProgramEnd .



state 3

    (82) Function -> TK_Function . ID TK_ParenI Argumento TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
    (83) Function -> TK_Function . ID TK_ParenI TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
    (4) ID -> . TK_ID

    TK_ID           shift and go to state 7

    ID                             shift and go to state 8

state 4

    (2) ProgramEnd -> TK_Program . Instructions TK_End TK_Semicolon
    (3) ProgramEnd -> TK_Program . TK_End TK_Semicolon
    (52) Instructions -> . InstructionsBase
    (53) Instructions -> . Instructions InstructionsBase
    (54) InstructionsBase -> . Set
    (55) InstructionsBase -> . Read
    (56) InstructionsBase -> . Print
    (57) InstructionsBase -> . ReturnI
    (58) InstructionsBase -> . VariableDeclaration
    (59) InstructionsBase -> . If_Else
    (60) InstructionsBase -> . Use_In
    (61) InstructionsBase -> . While
    (62) InstructionsBase -> . For
    (63) InstructionsBase -> . LlamadoFuncion
    (64) InstructionsBase -> . Comments
    (65) InstructionsBase -> . Expresion TK_Semicolon
    (9) Set -> . TK_Set ID TK_Assign Expresion TK_Semicolon
    (10) Set -> . TK_Set Vector TK_Assign Expresion TK_Semicolon
    (11) Set -> . TK_Set ID TK_Assign LlamadoFuncion TK_Semicolon
    (45) Read -> . TK_Read ID TK_Semicolon
    (47) Print -> . TK_Print CommaString TK_Semicolon
    (44) ReturnI -> . TK_Return Expresion TK_Semicolon
    (7) VariableDeclaration -> . Type ID TK_Semicolon
    (8) VariableDeclaration -> . Type ID TK_Assign Expresion TK_Semicolon
    (66) If_Else -> . TK_If Expresion TK_Then Instructions TK_End TK_Semicolon
    (67) If_Else -> . TK_If Expresion TK_Then Instructions TK_Else Instructions TK_End TK_Semicolon
    (73) Use_In -> . TK_Use Instructions TK_In Instructions TK_End TK_Semicolon
    (74) Use_In -> . TK_Use Instructions TK_In TK_End TK_Semicolon
    (76) While -> . TK_While Expresion TK_Do Instructions TK_End TK_Semicolon
    (75) For -> . TK_For ID TK_In Expresion TK_Do Instructions TK_End TK_Semicolon
    (88) LlamadoFuncion -> . ID TK_ParenI Parameter TK_ParenD TK_Semicolon
    (89) LlamadoFuncion -> . ID TK_ParenI TK_ParenD TK_Semicolon
    (46) Comments -> . TK_CommentConNumeral
    (14) Expresion -> . Boolean
    (15) Expresion -> . Number
    (16) Expresion -> . ID
    (17) Expresion -> . Vector
    (18) Expresion -> . MatrixFormatI
    (19) Expresion -> . TK_ParenI Expresion TK_ParenD
    (20) Expresion -> . TK_Not Expresion
    (21) Expresion -> . TK_Minus Expresion
    (22) Expresion -> . Expresion TK_Sum Expresion
    (23) Expresion -> . Expresion TK_Minus Expresion
    (24) Expresion -> . Expresion TK_Times Expresion
    (25) Expresion -> . Expresion TK_Divide Expresion
    (26) Expresion -> . Expresion TK_Div Expresion
    (27) Expresion -> . Expresion TK_Mod Expresion
    (28) Expresion -> . Expresion TK_ModS Expresion
    (29) Expresion -> . Expresion TK_Equal Expresion
    (30) Expresion -> . Expresion TK_Greatereq Expresion
    (31) Expresion -> . Expresion TK_Greater Expresion
    (32) Expresion -> . Expresion TK_Lesseq Expresion
    (33) Expresion -> . Expresion TK_Less Expresion
    (34) Expresion -> . Expresion TK_Distint Expresion
    (35) Expresion -> . Expresion TK_And Expresion
    (36) Expresion -> . Expresion TK_Or Expresion
    (37) Expresion -> . Expresion TK_Sumcross Expresion
    (38) Expresion -> . Expresion TK_Modcross Expresion
    (39) Expresion -> . Expresion TK_Minuscross Expresion
    (40) Expresion -> . Expresion TK_Divcross Expresion
    (41) Expresion -> . Expresion TK_ModScross Expresion
    (42) Expresion -> . Expresion TK_Dividecross Expresion
    (43) Expresion -> . Expresion TK_Timescross Expresion
    (77) Type -> . TK_Bool
    (78) Type -> . TK_Number
    (79) Type -> . Matrix
    (80) Type -> . Row
    (81) Type -> . Column
    (4) ID -> . TK_ID
    (12) Boolean -> . TK_False
    (13) Boolean -> . TK_True
    (6) Number -> . TK_FNumber
    (100) Vector -> . Expresion TK_BracketI Expresion TK_BracketD
    (101) Vector -> . Expresion TK_BracketI Expresion TK_Comma Expresion TK_BracketD
    (68) MatrixFormatI -> . TK_KeyI MatrixNumber TK_KeyD
    (92) Matrix -> . TK_Matrix TK_ParenI Number TK_Comma Number TK_ParenD
    (93) Matrix -> . TK_Matrix TK_ParenI ID TK_Comma ID TK_ParenD
    (94) Matrix -> . TK_Matrix TK_ParenI Number TK_Comma ID TK_ParenD
    (95) Matrix -> . TK_Matrix TK_ParenI ID TK_Comma Number TK_ParenD
    (96) Row -> . TK_Row TK_ParenI Number TK_ParenD
    (97) Row -> . TK_Row TK_ParenI ID TK_ParenD
    (98) Column -> . TK_Col TK_ParenI Number TK_ParenD
    (99) Column -> . TK_Col TK_ParenI ID TK_ParenD

    TK_End          shift and go to state 48
    TK_Set          shift and go to state 18
    TK_Read         shift and go to state 47
    TK_Print        shift and go to state 31
    TK_Return       shift and go to state 32
    TK_If           shift and go to state 16
    TK_Use          shift and go to state 22
    TK_While        shift and go to state 13
    TK_For          shift and go to state 24
    TK_CommentConNumeral shift and go to state 51
    TK_ParenI       shift and go to state 25
    TK_Not          shift and go to state 40
    TK_Minus        shift and go to state 36
    TK_Bool         shift and go to state 42
    TK_Number       shift and go to state 21
    TK_ID           shift and go to state 7
    TK_False        shift and go to state 52
    TK_True         shift and go to state 12
    TK_FNumber      shift and go to state 37
    TK_KeyI         shift and go to state 27
    TK_Matrix       shift and go to state 45
    TK_Row          shift and go to state 41
    TK_Col          shift and go to state 14

    If_Else                        shift and go to state 9
    Matrix                         shift and go to state 10
    For                            shift and go to state 11
    LlamadoFuncion                 shift and go to state 35
    Print                          shift and go to state 17
    VariableDeclaration            shift and go to state 20
    Read                           shift and go to state 23
    Type                           shift and go to state 19
    Instructions                   shift and go to state 28
    Expresion                      shift and go to state 29
    Column                         shift and go to state 30
    While                          shift and go to state 33
    Vector                         shift and go to state 34
    Comments                       shift and go to state 15
    InstructionsBase               shift and go to state 38
    ID                             shift and go to state 39
    MatrixFormatI                  shift and go to state 43
    Set                            shift and go to state 44
    Number                         shift and go to state 46
    ReturnI                        shift and go to state 49
    Boolean                        shift and go to state 50
    Row                            shift and go to state 26
    Use_In                         shift and go to state 53

state 5

    (84) Function -> Function TK_Function . ID TK_ParenI Argumento TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
    (85) Function -> Function TK_Function . ID TK_ParenI TK_ParenD TK_Return Type TK_Begin Instructions TK_End TK_Semicolon
    (4) ID -> . TK_ID

    TK_ID           shift and go to state 7

    ID                             shift and go to state 54

state 6
